--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Foodmate - Buy Now</h1>
     <P>Best Food Website</P>
-
+     <p>New Para</p>
     <footer>Designed by  UI Team</footer>
 
 </body>
