--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Foodmate - Buy Now</h1>
     <P>Best Food Website</P>
      <p>New Para</p>
+     <p>New para Commit</p>
     <footer>Designed by  UI Team</footer>
 
 </body>
